# outbreak-sim

./: .gitignore  Cargo.toml  README.md  codegen.sh
benches/: README.md  activity_queue.rs  event_loop.rs  iterations.rs  routing.rs  transmission.rs
python/: README.md  population_gen.ipynb  report_reader.ipynb  requirements.txt  run_iterations.py  synthetic_osm_buildings_v1.ipynb  synthetic_v1.ipynb  synthetic_world_pop_v1.ipynb
python/data/: sm_households.csv  sm_workplaces.csv  sm_wp.txt  tower_hamlets_households.csv  tower_hamlets_workplaces.csv  tower_hamlets_wp.tif  tower_hamlets_wp.txt
python/report_analysis/: README.md  report_reader.ipynb
python/synthetic_environments/: README.md  population_gen.ipynb
python/synthetic_environments/examples/: isle_of_wight.txt
python/synthetic_environments/spikes/: README.md  osm_buildings.ipynb  projections.ipynb
python/synthetic_population/: aggregate.ipynb  osm_buildings.ipynb  pop_count.ipynb  population_gen.ipynb  routing.ipynb
python/synthetic_population/output/: model_tower_hamlets.txt
python/synthetic_population/spikes/: aggregate.ipynb  hacky_tests.ipynb  pop_count.ipynb  (+1 more)
schema/: model.fbs
src/: disease.rs  flatbuffer.rs  graphics.rs  lib.rs  main.rs  position.rs  reporting.rs
src/activities/: activity_index.rs  mod.rs
src/agents/: mod.rs  position.rs
src/containers/: mod.rs
src/disease/: mixing.rs  mod.rs  status.rs
src/events/: event.rs  event_index.rs  mod.rs
src/pois/: household.rs  mod.rs
src/routing/: granular_grid.rs  mod.rs  transit.rs
src/shared/: mod.rs  types.rs
