[package]
name = "outbreak-sim"
version = "0.1.0"
authors = ["Alfred Mountfield <alfred.mountfield@student.manchester.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0"
pixels = "0.2.0"
winit = "0.23.0"
winit_input_helper = "0.8.0"
flatbuffers = "0.7.0"