[package]
name = "outbreak-sim"
version = "0.1.0"
authors = ["Alfred Mountfield <alfred.mountfield@student.manchester.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.4"

[dependencies]
rand = "0.8.3"
pixels = "0.2.0"
winit = "0.24.0"
winit_input_helper = "0.9.0"
flatbuffers = "0.7.0"
fast_paths = "0.1.1"
rayon = "1.5.0"
nonmax = "0.5.0"

#[profile.release]
#debug = true
#overflow-checks = true

[[bench]]
name = "routing"
harness = false

[[bench]]
name = "transmission"
harness = false

[[bench]]
name = "iterations"
harness = false

[[bench]]
name = "activity_queue"
harness = false
